--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Great+Vibes&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -18,12 +20,21 @@ body {
   align-items: center;
 }
 
+.container {
+  /* border: 1px solid red; */
+  width: 40%;
+  margin: auto;
+  margin-top: 10rem;
+}
+
+/* Calculator style */
 .calculator-container {
   border: 2px solid var(--primary-color);
   border-radius: 10px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   overflow: hidden;
+  margin-top: 10rem;
 }
 
 .button {
@@ -53,4 +64,56 @@ body {
 
 .zero-btn {
   grid-column: 1/3;
+}
+
+/* Quote style */
+.quote-container {
+  border: 2px solid var(--primary-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 350px;
+  padding: 2rem 1rem;
+  margin: 3rem 0;
+  border-radius: 10px;
+  background-color: #000;
+  position: relative;
+  user-select: none;
+  /* overflow-y: scroll; */
+}
+
+.quote-content {
+  /* border: 1px solid orange; */
+  color: green;
+  width: 100%;
+  font-family: 'Great Vibes', cursive;
+  font-size: 25px;
+}
+
+.quote-bottom-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.quote-category {
+  /* border: 3px solid blue; */
+  font-family: monospace;
+  font-size: 20px;
+  text-transform: capitalize;
+  background-color: orange;
+  padding: 0.5rem;
+  border-radius: 10px;
+  border: none;
+}
+
+.quote-author {
+  /* border: 1px solid red; */
+  color: red;
+  font-size: 25px;
+  text-transform: capitalize;
+  font-family: 'Abril Fatface', cursive;
+  letter-spacing: 6px;
+  font-style: italic;
 }
